--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,12 @@
         "monolog/monolog": "^1.17",
         "claviska/simpleimage": "^3.6",
         "cloudflare/sdk": "^1.1"
+    },
+	"require-dev": {
+		"phpunit/phpunit": "^10.2",
+		"guzzlehttp/guzzle": "^7.7"
+	},
+    "scripts": {
+        "test": "./vendor/bin/phpunit"
     }
 }
